apps/green/interactions/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interactions-api
  namespace: interactions
spec:
  selector:
    app: interactions-api
  ports:
    - port: 80
      targetPort: 8080
